--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -14,7 +14,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Cercle cosm&eacute;tique
+<td class="ctEven">TechDraw &rarr; Ajouter des lignes &rarr; Cercle cosm&eacute;tique par 1 point
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Cercle cosm&eacute;tique</b> ajoute un cercle cosm&eacute;tique &agrave; un point central s&eacute;lectionn&eacute;. Le point peut &ecirc;tre en 2D ou en 3D.
 </p><p><span typeof="mw:File"><a href="../index.php?title=CosmeticCircleSample.png&amp;filetimestamp=20230920163310&amp;.html" class="mw-file-description"><img src="../File/CosmeticCircleSample.png" decoding="async" width="200" height="216" class="mw-file-element" data-file-width="286" data-file-height="309"></a></span>
@@ -149,15 +147,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117141705
+Cached time: 20260117142025
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 409/1000000
-Post&#8208;expand include size: 27199/2097152 bytes
-Template argument size: 10329/2097152 bytes
+CPU time usage: 0.095 seconds
+Real time usage: 0.167 seconds
+Preprocessor visited node count: 408/1000000
+Post&#8208;expand include size: 27223/2097152 bytes
+Template argument size: 10353/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -165,19 +163,19 @@ Unstrip post&#8208;expand size: 1651/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.776      1 -total
- 26.61%    9.786      1 Template:TechDraw_Tools_navi/fr
- 17.25%    6.344      2 Template:Navigation_menu_2
- 16.16%    5.943      1 Template:Userdocnavi/fr
- 12.58%    4.627      1 Template:GuiCommand/fr
-  9.98%    3.672      2 Template:Docnav/fr
-  8.03%    2.953      1 Template:Incode
-  7.23%    2.659      2 Template:MenuCommand
-  6.69%    2.460      1 Template:Caption
-  4.87%    1.790      1 Template:KEY
+100.00%   42.459      1 -total
+ 19.07%    8.096      1 Template:TechDraw_Tools_navi/fr
+ 15.08%    6.401      1 Template:Userdocnavi/fr
+ 13.94%    5.919      2 Template:Navigation_menu_2
+ 13.02%    5.530      1 Template:GuiCommand/fr
+ 10.74%    4.562      2 Template:Docnav/fr
+  9.61%    4.080      4 Template:Button
+  8.54%    3.626      1 Template:Incode
+  8.02%    3.407      2 Template:MenuCommand
+  7.00%    2.974      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117141704 and revision id 1739540. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117142025 and revision id 1739545. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
