--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -9,7 +9,7 @@
 <li><a href="../ko/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#50896; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Sommet d&eacute;cal&eacute;</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=TechDraw_TechDraw_ExtensionDrawCosmCircle/fr&amp;action=edit&amp;redlink=1.html" class="new" title="TechDraw TechDraw ExtensionDrawCosmCircle/fr (page does not exist)">Cercle cosm&eacute;tique par 2 points</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle cosm&eacute;tique par 2 points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -100,7 +100,7 @@
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Sommet d&eacute;cal&eacute;</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=TechDraw_TechDraw_ExtensionDrawCosmCircle/fr&amp;action=edit&amp;redlink=1.html" class="new" title="TechDraw TechDraw ExtensionDrawCosmCircle/fr (page does not exist)">Cercle cosm&eacute;tique par 2 points</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle cosm&eacute;tique par 2 points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -143,15 +143,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117143515
+Cached time: 20260117143823
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.199 seconds
+CPU time usage: 0.080 seconds
+Real time usage: 0.133 seconds
 Preprocessor visited node count: 406/1000000
-Post&#8208;expand include size: 27271/2097152 bytes
-Template argument size: 10401/2097152 bytes
+Post&#8208;expand include size: 27217/2097152 bytes
+Template argument size: 10365/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -159,19 +159,19 @@ Unstrip post&#8208;expand size: 1655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.316      1 -total
- 25.89%   13.547      1 Template:TechDraw_Tools_navi/fr
- 22.92%   11.989      2 Template:Docnav/fr
- 18.49%    9.674      2 Template:Navigation_menu_2
- 11.21%    5.864      1 Template:Userdocnavi/fr
-  9.92%    5.191      1 Template:GuiCommand/fr
-  8.94%    4.679      4 Template:Button
-  7.00%    3.664      1 Template:Caption
-  5.56%    2.911      1 Template:Incode
-  3.07%    1.605      1 Template:KEY
+100.00%   32.858      1 -total
+ 25.67%    8.434      1 Template:Incode
+ 21.71%    7.135      1 Template:TechDraw_Tools_navi/fr
+ 14.04%    4.614      2 Template:Navigation_menu_2
+ 10.99%    3.611      1 Template:Userdocnavi/fr
+  8.94%    2.936      1 Template:Caption
+  8.83%    2.902      2 Template:Docnav/fr
+  7.44%    2.445      1 Template:KEY
+  6.25%    2.054      1 Template:GuiCommand/fr
+  3.98%    1.308      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117143515 and revision id 1739549. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117143823 and revision id 1739553. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
