--- a/wiki/fr/TechDraw_CosmeticCircle.html
+++ b/wiki/fr/TechDraw_CosmeticCircle.html
@@ -17,7 +17,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cercle cosm&eacute;tique
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cercle cosm&eacute;tique par 1 point
 </p>
 </td></tr>
 <tr>
@@ -143,15 +143,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117143823
+Cached time: 20260117143852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.133 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.168 seconds
 Preprocessor visited node count: 406/1000000
-Post&#8208;expand include size: 27217/2097152 bytes
-Template argument size: 10365/2097152 bytes
+Post&#8208;expand include size: 27241/2097152 bytes
+Template argument size: 10389/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -159,19 +159,19 @@ Unstrip post&#8208;expand size: 1655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.858      1 -total
- 25.67%    8.434      1 Template:Incode
- 21.71%    7.135      1 Template:TechDraw_Tools_navi/fr
- 14.04%    4.614      2 Template:Navigation_menu_2
- 10.99%    3.611      1 Template:Userdocnavi/fr
-  8.94%    2.936      1 Template:Caption
-  8.83%    2.902      2 Template:Docnav/fr
-  7.44%    2.445      1 Template:KEY
-  6.25%    2.054      1 Template:GuiCommand/fr
-  3.98%    1.308      4 Template:Button
+100.00%   51.074      1 -total
+ 37.99%   19.402      1 Template:TechDraw_Tools_navi/fr
+ 19.63%   10.027      2 Template:Navigation_menu_2
+ 12.89%    6.584      1 Template:Userdocnavi/fr
+ 12.47%    6.368      1 Template:KEY
+  6.82%    3.485      1 Template:GuiCommand/fr
+  6.61%    3.374      2 Template:Docnav/fr
+  6.19%    3.163      1 Template:Caption
+  6.09%    3.112      1 Template:Incode
+  3.64%    1.857      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117143823 and revision id 1739553. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322396-0!canonical and timestamp 20260117143851 and revision id 1739556. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
