--- a/wiki/fr/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/fr/TechDraw_CommandAddOffsetVertex.html
@@ -71,7 +71,7 @@
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique par 1 point</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117143931
+Cached time: 20260117143939
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.136 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.104 seconds
 Preprocessor visited node count: 358/1000000
-Post&#8208;expand include size: 25922/2097152 bytes
-Template argument size: 9991/2097152 bytes
+Post&#8208;expand include size: 25958/2097152 bytes
+Template argument size: 10015/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,18 +130,18 @@ Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.893      1 -total
- 27.80%    8.310      1 Template:TechDraw_Tools_navi/fr
- 17.83%    5.329      2 Template:Navigation_menu_2
- 15.68%    4.686      1 Template:GuiCommand/fr
- 13.57%    4.057      1 Template:Userdocnavi/fr
- 12.87%    3.846      2 Template:Docnav/fr
- 12.17%    3.637      1 Template:Caption
-  8.75%    2.617      3 Template:MenuCommand
-  6.12%    1.829      2 Template:Button
+100.00%   21.507      1 -total
+ 42.27%    9.091      1 Template:TechDraw_Tools_navi/fr
+ 26.15%    5.625      2 Template:Navigation_menu_2
+ 19.08%    4.103      1 Template:Userdocnavi/fr
+ 10.49%    2.256      2 Template:Docnav/fr
+  9.79%    2.105      1 Template:GuiCommand/fr
+  5.65%    1.216      1 Template:Caption
+  4.90%    1.054      3 Template:MenuCommand
+  4.89%    1.051      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117143931 and revision id 1739560. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117143939 and revision id 1739562. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
