--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
@@ -3,14 +3,12 @@
 <li><a href="../TechDraw_ExtensionDrawCosmCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDrawCosmCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj okr&#261;g kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique par 1 point</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle cosm&eacute;tique par 3 points</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -122,15 +120,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117141337
+Cached time: 20260117144036
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.188 seconds
-Preprocessor visited node count: 351/1000000
-Post&#8208;expand include size: 25477/2097152 bytes
-Template argument size: 9935/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.115 seconds
+Preprocessor visited node count: 350/1000000
+Post&#8208;expand include size: 25585/2097152 bytes
+Template argument size: 10007/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -138,18 +136,18 @@ Unstrip post&#8208;expand size: 1142/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.264      1 -total
- 27.94%   10.131      1 Template:TechDraw_Tools_navi/fr
- 23.46%    8.506      1 Template:Userdocnavi/fr
- 21.81%    7.910      2 Template:Navigation_menu_2
- 13.58%    4.923      1 Template:GuiCommand/fr
- 11.48%    4.164      2 Template:Docnav/fr
- 10.48%    3.802      1 Template:Caption
-  5.54%    2.011      1 Template:Button
-  4.86%    1.762      1 Template:MenuCommand
+100.00%   26.149      1 -total
+ 29.29%    7.658      1 Template:TechDraw_Tools_navi/fr
+ 21.49%    5.620      2 Template:Navigation_menu_2
+ 17.42%    4.554      1 Template:GuiCommand/fr
+ 15.96%    4.173      2 Template:Docnav/fr
+ 13.55%    3.542      1 Template:Userdocnavi/fr
+  8.27%    2.162      1 Template:MenuCommand
+  6.99%    1.828      1 Template:Caption
+  6.03%    1.576      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117141337 and revision id 1733969. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144036 and revision id 1739564. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
