--- a/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmArc.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionDrawCosmArc/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionDrawCosmArc&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Erg&auml;nzungHilfsbogenZeichnen (44% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHilfsbogenZeichnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmArc (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDrawCosmArc.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj &#322;uk kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
@@ -123,34 +123,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111140513
+Cached time: 20260117144404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.184 seconds
+CPU time usage: 0.065 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 351/1000000
 Post&#8208;expand include size: 25598/2097152 bytes
 Template argument size: 10030/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1119/5000000 bytes
+Unstrip post&#8208;expand size: 1125/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.688      1 -total
- 29.35%    9.008      1 Template:TechDraw_Tools_navi/fr
- 21.71%    6.661      1 Template:Userdocnavi/fr
- 18.45%    5.661      2 Template:Docnav/fr
- 16.81%    5.158      1 Template:GuiCommand/fr
- 14.35%    4.404      2 Template:Navigation_menu_2
-  5.00%    1.534      1 Template:Caption
-  3.63%    1.115      1 Template:Button
-  3.27%    1.003      1 Template:MenuCommand
+100.00%   20.845      1 -total
+ 32.56%    6.788      1 Template:TechDraw_Tools_navi/fr
+ 23.13%    4.821      2 Template:Navigation_menu_2
+ 18.26%    3.807      1 Template:Userdocnavi/fr
+ 13.11%    2.732      1 Template:GuiCommand/fr
+ 12.21%    2.544      2 Template:Docnav/fr
+  9.04%    1.884      1 Template:MenuCommand
+  6.57%    1.370      1 Template:Caption
+  5.39%    1.124      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260111140513 and revision id 1733964. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277791-0!canonical and timestamp 20260117144404 and revision id 1733964. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
