--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionDrawCosmCircle/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionDrawCosmCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionDrawCosmCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHilfskreisZeichnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionDrawCosmCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmCircle (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDrawCosmCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj okr&#261;g kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique par 1 point</a></div>
@@ -10,18 +10,17 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cercle
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cercle cosm&eacute;tique par 2 points
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; Cercle
+<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Cercle cosm&eacute;tique par 2 points
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -45,12 +44,11 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">TechDraw Arc</a>
+<td class="ctEven"><a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">TechDraw Arc cosm&eacute;tique</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Cercle</b> ajoute un cercle cosm&eacute;tique bas&eacute; sur deux sommets.
@@ -118,34 +116,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144050
+Cached time: 20260117144433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 349/1000000
-Post&#8208;expand include size: 25693/2097152 bytes
-Template argument size: 10079/2097152 bytes
+CPU time usage: 0.083 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 348/1000000
+Post&#8208;expand include size: 25803/2097152 bytes
+Template argument size: 10189/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1142/5000000 bytes
+Unstrip post&#8208;expand size: 1143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.193      1 -total
- 34.23%    8.965      1 Template:TechDraw_Tools_navi/fr
- 25.56%    6.696      2 Template:Navigation_menu_2
- 15.89%    4.161      1 Template:Userdocnavi/fr
- 14.81%    3.880      1 Template:Caption
- 12.10%    3.169      1 Template:GuiCommand/fr
-  8.11%    2.125      2 Template:Docnav/fr
-  6.65%    1.741      1 Template:MenuCommand
-  6.27%    1.642      1 Template:Button
+100.00%   29.855      1 -total
+ 34.62%   10.335      1 Template:TechDraw_Tools_navi/fr
+ 20.38%    6.084      2 Template:Navigation_menu_2
+ 13.25%    3.955      1 Template:Userdocnavi/fr
+ 12.95%    3.867      1 Template:GuiCommand/fr
+ 11.16%    3.331      1 Template:Caption
+  9.66%    2.883      2 Template:Docnav/fr
+  8.47%    2.528      1 Template:MenuCommand
+  7.16%    2.138      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144050 and revision id 1739566. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144433 and revision id 1739569. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
