--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle.html
@@ -50,11 +50,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'outil <b>TechDraw Cercle</b> ajoute un cercle cosm&eacute;tique bas&eacute; sur deux sommets.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircleExample.png&amp;filetimestamp=20211108131448&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircleExample.png" decoding="async" width="250" height="165" class="mw-file-element" data-file-width="600" data-file-height="397"></a></span>
+<p>L'outil <b>TechDraw Cercle cosm&eacute;tique par 2 points</b> ajoute un cercle cosm&eacute;tique bas&eacute; sur deux sommets.
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircleExample.png&amp;filetimestamp=20211108131448&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircleExample.png" decoding="async" width="250" height="165" class="mw-file-element" data-file-width="600" data-file-height="397"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, un cercle cosm&eacute;tique ajout&eacute;</p>
 <p><span id="Usage"></span>
@@ -116,13 +113,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144433
+Cached time: 20260117144450
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25803/2097152 bytes
 Template argument size: 10189/2097152 bytes
 Highest expansion depth: 6/100
@@ -132,18 +129,18 @@ Unstrip post&#8208;expand size: 1143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.855      1 -total
- 34.62%   10.335      1 Template:TechDraw_Tools_navi/fr
- 20.38%    6.084      2 Template:Navigation_menu_2
- 13.25%    3.955      1 Template:Userdocnavi/fr
- 12.95%    3.867      1 Template:GuiCommand/fr
- 11.16%    3.331      1 Template:Caption
-  9.66%    2.883      2 Template:Docnav/fr
-  8.47%    2.528      1 Template:MenuCommand
-  7.16%    2.138      1 Template:Button
+100.00%   28.743      1 -total
+ 29.95%    8.607      1 Template:TechDraw_Tools_navi/fr
+ 20.62%    5.927      2 Template:Navigation_menu_2
+ 18.04%    5.186      1 Template:Userdocnavi/fr
+ 15.27%    4.390      2 Template:Docnav/fr
+ 13.85%    3.982      1 Template:GuiCommand/fr
+  8.18%    2.351      1 Template:MenuCommand
+  6.22%    1.787      1 Template:Button
+  5.56%    1.597      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144433 and revision id 1739569. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277781-0!canonical and timestamp 20260117144450 and revision id 1739571. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
